k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: staging
spec:
  rules:
  - host: todoapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp
            port:
              number: 8080
  - host: mongodb
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017
